Fix build after structure refresh